fix: layout shift ( error div swap to input make element move up or down when rename )

--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -273,3 +273,15 @@ input.profile-item:active {
   position: absolute;
   width: 100%;
 }
+
+#profileRename {
+  width: 100%;
+  height: 18px;
+  background: transparent;
+  border: 1px solid #44d62c;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  display: block;
+}
